force-app/main/default/objects/Apttus__APTS_Template__c/fields/Apttus__ActivateVersion__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ActivateVersion__c</fullName>
    <formula>IF (True, HYPERLINK("/apex/Apttus__TemplateFinder?source=salesforce&amp;callerMode=activate&amp;templateId=" &amp;Id, IMAGE("/resource/Apttus__Button_ActivateVersion", "Activate"),"_self"), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activate Version</label>
    <type>Text</type>
</CustomField>