force-app/main/default/objects/Apttus__APTS_Template__c/fields/Apttus__Publish__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Publish__c</fullName>
    <description>"Publish" custom button</description>
    <formula>IF (True, HYPERLINK("/apex/Apttus__TemplatePublish?id=" &amp;Id, IMAGE("/resource/Apttus__Button_Publish", "Publish"),"_self"), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Publish</label>
    <type>Text</type>
</CustomField>