force-app/main/default/objects/Apttus__APTS_Template__c/fields/Apttus__Unpublish__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Unpublish__c</fullName>
    <description>"Unpublish" custom button</description>
    <formula>IF ( LEN( Apttus__PubDocId__c ) > 0 , HYPERLINK("/apex/Apttus__TemplateUnpublish?id=" &amp;Id, IMAGE("/resource/Apttus__Button_Unpublish", "Unpublish"),"_self"), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unpublish</label>
    <type>Text</type>
</CustomField>